I18N: more localization + some bugfixes

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -1,6 +1,10 @@
 # Buttons
 Button.ok=OK
 Button.cancel=Abbrechen
+Button.add=Add
+Button.remove=Remove
+Button.continue=Continue
+Button.abort=Abort
 
 # vertical tabs
 movies=Filme
@@ -39,3 +43,81 @@ Feedback.send.error=Fehler beim Senden vom Feedback
 Feedback.send.ok=Feedback gesendet - Danke!
 
 Searchfield=Suchen...
+no.image.found=kein Bild gefunden
+
+# settings menu (linebreaks with html)
+Settings.movies=Filme
+Settings.scraper=<html>Filme -<br>Scraper</html>
+Settings.images=<html>Filme -<br>Bilder</html>
+Settings.general=Allgemein
+
+# general settings
+Settings.proxy=Proxy Einstellungen
+Settings.proxyhost=Host
+Settings.proxyport=Port
+Settings.proxyuser=Benutzername
+Settings.proxypass=Passwort
+Settings.clearCache=Cache beim Beenden löschen
+
+# image settings
+Settings.poster=Poster und Fanart
+Settings.source=Datenherkunft
+Settings.fanarttv.alert=Achtung: Fanart.tv unterstützt keine Film Poster!
+Settings.postersize=Poster Größe
+Settings.fanartsize=Fanart Größe
+Settings.posternaming=Poster Name
+Settings.fanartnaming=Fanart name
+Settings.moviefilename=<Film Dateiname>
+Settings.tbn.deprecation=.tbn is ein altes Format und wird nicht mehr unterstützt.
+Settings.naming.info=Info: Jede Datei mit .JPG kann möglicherweise ein .PNG herunterladen. Es hängt von der Bild Quelle ab.
+Settings.enable.extrathumbs=Extrathumbs aktivieren
+Settings.resize.extrathumbs=Extrathumbs auf folgende Breite skalieren
+Settings.enable.extrafanart=Extrafanart aktivieren
+Settings.amount.autodownload=Anzahl an Bildern, die beim automatisierten scrapen heruntergeladen wird
+Settings.actor=Schauspieler Bilder
+Settings.actor.download=Lade Bilder von Schauspielern in das .actors Verzeichnis
+Settings.movieset=Movieset artwork
+Settings.movieset.store=Speichere Movieset Artwork in einem seperaten Verzeichnis
+Settings.movieset.foldername=Verzeichnis Name
+Settings.movieset.buttonselect=Verzeichnis auswählen
+Settings.movieset.folderchooser=Wähle das Movieset Artwork Verzeichnis
+
+# scraper settings
+Settings.metadata=Metadata scraper
+Settings.getfromTMDB=Plot/Title/Tagline von der TMDB übernehmen?
+Settings.preferredLanguage=bevorzugte Sprache
+Settings.certificationCountry=lokalisierte Altersbeschränkung
+Settings.defaults=Standardmäßig folgende Metadaten aktualisieren
+Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Auswahl)
+Settings.trailer=Film-Trailer scrapen
+
+# movie settings
+Settings.datasource=Film Verzeichnis
+Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
+Settings.datasource.remove=Film Verzeichnis entfernen
+Settings.datasource.remove.info=Wenn Du den Pfad %s entfernst, werden auch alle Filme mit dem Pfad aus der DB entfernt. Weitermachen?
+Settings.nfoFormat=NFO Format
+Settings.nofFileNaming=NFO Dateiname
+Settings.filetypes=Dateitypen
+Settings.sorting=Sortierung der Filmliste
+Settings.sorting.info=Folgende Titel Präfixe beeinflussen die Film Sortierung.\n\nBeispiel: Die\nAus 'Die Bourne Identität' wird dann 'Bourne Identität, Die'.\nUm diese Feature auszuschalten, einfach alle Einträge entfernen.
+Settings.titlePrefix=Titel Präfix
+Settings.renamer=Film Dateien umbenennen 
+Settings.renamer.folder=Verzeichnis
+Settings.renamer.file=Dateiname
+Settings.renamer.info=Verfügbare Werte\r\n$T = Titel\r\n$O = Original Titel\r\n$1 = Erster Buchstabe des Titels\r\n$Y = Jahr\r\n$I = IMDB Nummer\r\n$E = Titel sortiert (s.r.)\r\n$R = Video Auflösung\r\n$A = Audio Codec + Kanäle\r\n$V = Video Codec + Format
+Settings.renamer.example=Wähle eine Datei und/oder Verzeichnis Schema\nBeispiel:\nFilmverzeichnis = C:\\Filme\nVerzeichnis $1\\$T [$Y]\nDateiname = $T\n\nErgebnis:\nVerzeichnis = C:\\Filme\\A\\Aladdin [1992]\nDateiname = Aladdin.avi\n\n\n\nUm Ordner/Dateien nicht umzubenennen, Feld einfach leer lassen.
+
+# metatags
+metatag.title=Titel
+metatag.otitle=Original Titel
+metatag.tagline=kurze Inhaltsangabe
+metatag.plot=Inhaltsangabe
+metatag.rating=Bewertung
+metatag.runtime=Laufzeit
+metatag.year=Jahr
+metatag.certification=Altersbeschränkung
+metatag.cast=Besetzung
+metatag.genre=Genre
+metatag.artwork=Artwork
+metatag.trailer=Film Trailer
