--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -1,6 +1,10 @@
 # Buttons
-Button.ok=OK
+Button.ok=Ok
 Button.cancel=Cancel
+Button.add=Add
+Button.remove=Remove
+Button.continue=Continue
+Button.abort=Abort
 
 # vertical tabs
 movies=Movies
@@ -39,3 +43,81 @@ Feedback.send.error=Error sending feedback
 Feedback.send.ok=Feedback sent
 
 Searchfield=Search...
+no.image.found=no image found
+
+# settings menu (linebreaks with html)
+Settings.movies=Movies
+Settings.scraper=<html>Movies -<br>Scraper</html>
+Settings.images=<html>Movies -<br>Images</html>
+Settings.general=General
+
+# general settings
+Settings.proxy=Proxy Settings
+Settings.proxyhost=Host
+Settings.proxyport=Port
+Settings.proxyuser=Username
+Settings.proxypass=Password
+Settings.clearCache=Clear cache on shutdown
+
+# image settings
+Settings.poster=Poster and Fanart
+Settings.source=Source
+Settings.fanarttv.alert=Attention: Fanart.tv does not provide poster
+Settings.postersize=Poster size
+Settings.fanartsize=Fanart size
+Settings.posternaming=Poster file naming
+Settings.fanartnaming=Fanart file naming
+Settings.moviefilename=<movie filename>
+Settings.tbn.deprecation=.tbn is deprecated and will be removed soon
+Settings.naming.info=Note: every file naming option ending with .jpg will alternatively store a png. It depends on the source of the image file
+Settings.enable.extrathumbs=Enable extrathumbs
+Settings.resize.extrathumbs=Resize extrathumbs to (width)
+Settings.enable.extrafanart=Enable extrafanart
+Settings.amount.autodownload=maximum of downloaded images on automatic scraping
+Settings.actor=Actor Images
+Settings.actor.download=download actor images to .actors
+Settings.movieset=Movieset artwork
+Settings.movieset.store=Store movieset artwork in a separate folder
+Settings.movieset.foldername=Folder name
+Settings.movieset.buttonselect=Select folder
+Settings.movieset.folderchooser=select movieset artwork folder
+
+# scraper settings
+Settings.metadata=Metadata scraper
+Settings.getfromTMDB=Plot/Title/Tagline from TMDB
+Settings.preferredLanguage=Preferred language
+Settings.certificationCountry=Certification country
+Settings.defaults=Metadata scrape defaults
+Settings.default.autoscrape=automatically scrape images (without selection)
+Settings.trailer=Trailer scraper
+
+# movie settings
+Settings.datasource=Data Sources
+Settings.datasource.folderchooser=add datasource
+Settings.datasource.remove=Remove datasource
+Settings.datasource.remove.info=If you remove %s from your data sources, all movies inside this path will also be removed. Continue?
+Settings.nfoFormat=NFO format
+Settings.nofFileNaming=NFO file naming
+Settings.filetypes=Filetypes
+Settings.sorting=Movielist sorting
+Settings.sorting.info=Choose prefixes, which will affect the sort order of the movielist.\n\nExample: The\n'The Bourne Identity' will be shown as 'Bourne Identity, The'\n\nIf you want to disable this feature, just clear the list
+Settings.titlePrefix=Title prefixes
+Settings.renamer=Renamer
+Settings.renamer.folder=Folder name
+Settings.renamer.file=File name
+Settings.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$Y = Year\r\n$I = IMDB number\r\n$E = Sort title\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
+Settings.renamer.example=Choose a folder and file renaming pattern.\nExample:\nDatasource = /media/movies\nFolder name = $1/$T [$Y]\nFile name = $T\n\nResult:\nFolder name = /media/movies/A/Aladdin [1992]/\nFile name = Aladdin.avi\n\n\n\nIf fields are empty, the renaming will be skipped!
+
+# metatags
+metatag.title=Title
+metatag.otitle=Original title
+metatag.tagline=Tagline
+metatag.plot=Plot
+metatag.rating=Rating
+metatag.runtime=Runtime
+metatag.year=Year
+metatag.certification=Certification
+metatag.cast=Cast
+metatag.genre=Genres
+metatag.artwork=Artwork
+metatag.trailer=Trailer
