I18N: further extracted messages (eng only)

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -1,10 +1,10 @@
 # Buttons
-Button.ok=OK
+Button.ok=Ok
 Button.cancel=Abbrechen
-Button.add=Add
-Button.remove=Remove
-Button.continue=Continue
-Button.abort=Abort
+Button.add=Hinzufügen
+Button.remove=Entfernen
+Button.continue=Weitermachen
+Button.abort=Abbrechen
 
 # vertical tabs
 movies=Filme
