--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -24,6 +24,26 @@ donate=Donate
 exit=Exit
 status.activethreads=active threads
 
+# menu & popup on rightclick
+onlyoneoperation=Only one operation at one time is allowed
+movie.update.datasource=Update data sources
+movie.scrape.selected=Search & scrape selected movie(s)
+movie.scrape.selected.desc=Search & scrape selected movie(s)
+movie.scrape.selected.force=Search & scrape selected movie(s) - force best match
+movie.scrape.selected.force.desc=Search & scrape selected movie(s) without user interaction; forces best match
+movie.scrape.unscraped=Search & scrape all unscraped movie(s) - force best match
+movie.scrape.unscraped.desc=Search & scrape all unscraped movie(s) without user interaction; forces best match
+movie.scrape.metadata=Scrape metadata for selected movie(s)
+movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
+movie.edit=Edit movie
+movie.remove=Remove selected movie(s)
+movie.export=Export selected movie(s)
+movie.rename=Rename selected movie(s)
+movie.updatemediainfo=Update media information of selected movie(s)
+movie.bulkedit=Bulk editing
+movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
+
+
 BugReport=Report a bug
 BugReport.name=Name (optional)
 BugReport.description=Description
@@ -109,15 +129,74 @@ Settings.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n
 Settings.renamer.example=Choose a folder and file renaming pattern.\nExample:\nDatasource = /media/movies\nFolder name = $1/$T [$Y]\nFile name = $T\n\nResult:\nFolder name = /media/movies/A/Aladdin [1992]/\nFile name = Aladdin.avi\n\n\n\nIf fields are empty, the renaming will be skipped!
 
 # metatags
-metatag.title=Title
-metatag.otitle=Original title
-metatag.tagline=Tagline
-metatag.plot=Plot
-metatag.rating=Rating
-metatag.runtime=Runtime
-metatag.year=Year
-metatag.certification=Certification
-metatag.cast=Cast
-metatag.genre=Genres
 metatag.artwork=Artwork
+metatag.audiochannels=AChannels
+metatag.audiocodec=ACodec
+metatag.cast=Cast
+metatag.certification=Certification
+metatag.dateadded=Date Added
+metatag.filename=Filename
+metatag.files=Files
+metatag.genre=Genres
+metatag.images=Images
+metatag.imdb=IMDB Id
+metatag.name=Name
+metatag.nfo=NFO
+metatag.notwatched=Not watched
+metatag.originaltitle=Original Title
+metatag.path=Path
+metatag.plot=Plot
+metatag.production=Production
+metatag.quality=Quality
+metatag.rating=Rating
+metatag.resolution=Resolution
+metatag.runtime=Runtime
+metatag.size=Size
+metatag.source=Source
+metatag.spokenlanguages=Spoken languages
+metatag.tagline=Tagline
+metatag.tags=Tags
+metatag.title=Title
+metatag.tmdb=TMDB Id
 metatag.trailer=Trailer
+metatag.url=Url
+metatag.videobitrate=VBitrate
+metatag.videocodec=VCodec
+metatag.watched=Watched
+metatag.year=Year
+
+sort.ascending=Ascending
+sort.descending=Descending
+movie.inmovieset=Movies in a movieset
+movie.notinmovieset=Movies not in a movieset
+movieset=Movieset
+
+moviechooser.nothingfound=nothing found
+
+movieextendedsearch.options=Extended filter and sort options
+movieextendedsearch.filterby=filter by
+movieextendedsearch.duplicates=Show duplicates
+movieextendedsearch.watched=Watched flag
+movieextendedsearch.genre=Genre
+movieextendedsearch.cast=Cast member
+movieextendedsearch.tag=Tag
+movieextendedsearch.movieset=Movies in movieset
+movieextendedsearch.sortby=sort by
+
+movieinformation.details=Details
+movieinformation.overview=Overview
+movieinformation.director=Director
+movieinformation.writer=Writer
+movieinformation.cast=Cast
+movieinformation.actors=Actors
+movieinformation.mediainformation=Media Information
+movieinformation.trailer=Trailer
+
+
+
+
+#BUNDLE.getString("")); //$NON-NLS-1$
+
+#  /** The Constant BUNDLE. */
+#  private static final ResourceBundle BUNDLE           = ResourceBundle.getBundle("messages", new UTF8Control()); //$NON-NLS-1$
+
