--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -12,7 +12,7 @@ moviesets=Film Sets
 settings=Einstellungen
 
 # menu actions
-exit.runningtasks=Bist Du sicher, dass Du tinyMediaManager schließen möchtest?\nEinige Aufgaben laufen noch im HIntergrund...
+exit.runningtasks=Bist Du sicher, dass Du tinyMediaManager schließen möchtest?\nEinige Aufgaben laufen noch im Hintergrund...
 exit.confirmation=Wirklich beenden?
 clearCache=Cache löschen
 clearDatabase=Datenbank neu aufbauen
