--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -2,9 +2,13 @@
 Button.ok=Ok
 Button.cancel=Cancel
 Button.add=Add
+Button.addfile=Add file
 Button.remove=Remove
 Button.continue=Continue
 Button.abort=Abort
+Button.abortqueue=Abort queue
+Button.close=Close
+Button.search=Search
 
 # vertical tabs
 movies=Movies
@@ -35,14 +39,61 @@ movie.scrape.unscraped=Search & scrape all unscraped movie(s) - force best match
 movie.scrape.unscraped.desc=Search & scrape all unscraped movie(s) without user interaction; forces best match
 movie.scrape.metadata=Scrape metadata for selected movie(s)
 movie.scrape.metadata.desc=Scrape metadata for selected movie(s)
-movie.edit=Edit movie
 movie.remove=Remove selected movie(s)
-movie.export=Export selected movie(s)
 movie.rename=Rename selected movie(s)
 movie.updatemediainfo=Update media information of selected movie(s)
 movie.bulkedit=Bulk editing
 movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
 
+movie.export=Export selected movie(s)
+movie.export.detail=Template contains detail pages
+movie.export.setdestination=Set export destination
+movie.export.selectdirectory=select export directory
+
+movie.edit=Edit movie
+movie.edit.discard=Discard changes
+
+cast.actor.add=Add a new Actor
+cast.actor.remove=Remove Actor
+cast.actor.unknown=unknown actor
+cast.role.unknown=unknown role
+
+scraper=Scraper
+scraper.metadata.select=Select metadata to be scraped
+scraper.metadata.defaults=Metadata scrape defaults
+scraper.start=Start scraping
+scraper.metadata=Metadata scraper
+scraper.artwork=Artwork scraper
+scraper.trailer=Trailer scraper
+
+image.choose=Choose an image
+image.choose.file=Choose file
+image.choose.fanart=Choose fanart
+image.choose.poster=Choose poster
+image.extrathumbs.markall=Mark all extrathumbs
+image.extrathumbs.unmarkall=Unmark all extrathumbs
+image.extrafanart.markall=Mark all extrafanart
+image.extrafanart.unmarkall=Unmark all extrafanart
+image.nonefound=no image found
+image.noneselected=no image selected!
+image.seteselected=Set selected image
+image.download.noid=No ID (imdbId or tmdbId) for searching available
+image.download.progress=Downloading images
+image.poster.size=Poster size
+image.poster.naming=Poster file naming
+image.fanart.size=Fanart size
+image.fanart.naming=Fanart file naming
+
+genre.add=Add genre
+genre.remove=Remove genre
+
+trailer.add=Add trailer
+trailer.remove=Remove selected trailer
+
+tag.add=Add tag
+tag.remove=Remove selected tag
+
+queue.abort.desc=Abort editing all selected movies
 
 BugReport=Report a bug
 BugReport.name=Name (optional)
@@ -63,7 +114,6 @@ Feedback.send.error=Error sending feedback
 Feedback.send.ok=Feedback sent
 
 Searchfield=Search...
-no.image.found=no image found
 
 # settings menu (linebreaks with html)
 Settings.movies=Movies
@@ -83,10 +133,6 @@ Settings.clearCache=Clear cache on shutdown
 Settings.poster=Poster and Fanart
 Settings.source=Source
 Settings.fanarttv.alert=Attention: Fanart.tv does not provide poster
-Settings.postersize=Poster size
-Settings.fanartsize=Fanart size
-Settings.posternaming=Poster file naming
-Settings.fanartnaming=Fanart file naming
 Settings.moviefilename=<movie filename>
 Settings.tbn.deprecation=.tbn is deprecated and will be removed soon
 Settings.naming.info=Note: every file naming option ending with .jpg will alternatively store a png. It depends on the source of the image file
@@ -103,13 +149,10 @@ Settings.movieset.buttonselect=Select folder
 Settings.movieset.folderchooser=select movieset artwork folder
 
 # scraper settings
-Settings.metadata=Metadata scraper
 Settings.getfromTMDB=Plot/Title/Tagline from TMDB
 Settings.preferredLanguage=Preferred language
 Settings.certificationCountry=Certification country
-Settings.defaults=Metadata scrape defaults
 Settings.default.autoscrape=automatically scrape images (without selection)
-Settings.trailer=Trailer scraper
 
 # movie settings
 Settings.datasource=Data Sources
@@ -140,6 +183,7 @@ metatag.files=Files
 metatag.genre=Genres
 metatag.images=Images
 metatag.imdb=IMDB Id
+metatag.minutes=min
 metatag.name=Name
 metatag.nfo=NFO
 metatag.notwatched=Not watched
@@ -150,8 +194,10 @@ metatag.production=Production
 metatag.quality=Quality
 metatag.rating=Rating
 metatag.resolution=Resolution
+metatag.role=Role
 metatag.runtime=Runtime
 metatag.size=Size
+metatag.sorttitle=Sorttitle
 metatag.source=Source
 metatag.spokenlanguages=Spoken languages
 metatag.tagline=Tagline
@@ -169,9 +215,17 @@ sort.ascending=Ascending
 sort.descending=Descending
 movie.inmovieset=Movies in a movieset
 movie.notinmovieset=Movies not in a movieset
+movie.change=Change movie
 movieset=Movieset
 
+tmdb.wrongformat=wrong format: TMDB Id
+
 moviechooser.nothingfound=nothing found
+moviechooser.search=Search movie
+moviechooser.scrape=Scrape following items
+moviechooser.scrapeing=scraping:
+moviechooser.searchingfor=searching for: 
+moviechooser.searchresult=Search result 
 
 movieextendedsearch.options=Extended filter and sort options
 movieextendedsearch.filterby=filter by
@@ -184,6 +238,7 @@ movieextendedsearch.movieset=Movies in movieset
 movieextendedsearch.sortby=sort by
 
 movieinformation.details=Details
+movieinformation.details2=Details 2
 movieinformation.overview=Overview
 movieinformation.director=Director
 movieinformation.writer=Writer
@@ -195,8 +250,8 @@ movieinformation.trailer=Trailer
 
 
 
-#BUNDLE.getString("")); //$NON-NLS-1$
+BUNDLE.getString("")); //$NON-NLS-1$
 
-#  /** The Constant BUNDLE. */
-#  private static final ResourceBundle BUNDLE           = ResourceBundle.getBundle("messages", new UTF8Control()); //$NON-NLS-1$
+  /** The Constant BUNDLE. */
+  private static final ResourceBundle BUNDLE           = ResourceBundle.getBundle("messages", new UTF8Control()); //$NON-NLS-1$
 
