I18N: refactored some messages

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -16,16 +16,18 @@ moviesets=Movie sets
 settings=Settings
 
 # menu actions
-exit.runningtasks=Are you sure you want to close tinyMediaManager?\nSome threads seem to be still running...
-exit.confirmation=Exit Confirmation
-clearCache=clear cache
-clearDatabase=initialize database
-clearDatabase.info=Database initialized. Please restart tinyMediaManager
-clearDatabase.error=An error occured on database init. Please delete the file tmm.odb manually
-debug=Debug
-about=About
-donate=Donate
-exit=Exit
+tmm.exit=Exit
+tmm.exit.runningtasks=Are you sure you want to close tinyMediaManager?\nSome threads seem to be still running...
+tmm.exit.confirmation=Exit Confirmation
+tmm.clearcache=clear cache
+tmm.cleardatabase=initialize database
+tmm.cleardatabase.info=Database initialized. Please restart tinyMediaManager
+tmm.cleardatabase.error=An error occured on database init. Please delete the file tmm.odb manually
+tmm.debug=Debug
+tmm.about=About
+tmm.donate=Donate
+tmm.searchfield=Search...
+
 status.activethreads=active threads
 
 # menu & popup on rightclick
@@ -52,6 +54,10 @@ movie.export.selectdirectory=select export directory
 
 movie.edit=Edit movie
 movie.edit.discard=Discard changes
+
+movie.inmovieset=Movies in a movieset
+movie.notinmovieset=Movies not in a movieset
+movie.change=Change movie
 
 cast.actor.add=Add a new Actor
 cast.actor.remove=Remove Actor
@@ -95,6 +101,11 @@ tag.remove=Remove selected tag
 
 queue.abort.desc=Abort editing all selected movies
 
+sort.ascending=Ascending
+sort.descending=Descending
+
+tmdb.wrongformat=wrong format: TMDB Id
+
 BugReport=Report a bug
 BugReport.name=Name (optional)
 BugReport.description=Description
@@ -112,8 +123,6 @@ Feedback.message=Feedback
 Feedback.message.empty=Feedback is empty
 Feedback.send.error=Error sending feedback
 Feedback.send.ok=Feedback sent
-
-Searchfield=Search...
 
 # settings menu (linebreaks with html)
 Settings.movies=Movies
@@ -184,6 +193,7 @@ metatag.genre=Genres
 metatag.images=Images
 metatag.imdb=IMDB Id
 metatag.minutes=min
+metatag.movieset=Movieset
 metatag.name=Name
 metatag.nfo=NFO
 metatag.notwatched=Not watched
@@ -210,15 +220,6 @@ metatag.videobitrate=VBitrate
 metatag.videocodec=VCodec
 metatag.watched=Watched
 metatag.year=Year
-
-sort.ascending=Ascending
-sort.descending=Descending
-movie.inmovieset=Movies in a movieset
-movie.notinmovieset=Movies not in a movieset
-movie.change=Change movie
-movieset=Movieset
-
-tmdb.wrongformat=wrong format: TMDB Id
 
 moviechooser.nothingfound=nothing found
 moviechooser.search=Search movie
@@ -250,8 +251,8 @@ movieinformation.trailer=Trailer
 
 
 
-BUNDLE.getString("")); //$NON-NLS-1$
+#BUNDLE.getString("")); //$NON-NLS-1$
 
-  /** The Constant BUNDLE. */
-  private static final ResourceBundle BUNDLE           = ResourceBundle.getBundle("messages", new UTF8Control()); //$NON-NLS-1$
+#  /** The Constant BUNDLE. */
+#  private static final ResourceBundle BUNDLE           = ResourceBundle.getBundle("messages", new UTF8Control()); //$NON-NLS-1$
 
