I18N: refactored some messages

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -11,9 +11,9 @@ Button.close=Close
 Button.search=Search
 
 # vertical tabs
-movies=Movies
-moviesets=Movie sets
-settings=Settings
+tmm.movies=Movies
+tmm.moviesets=Movie sets
+tmm.settings=Settings
 
 # menu actions
 tmm.exit=Exit
@@ -247,12 +247,3 @@ movieinformation.cast=Cast
 movieinformation.actors=Actors
 movieinformation.mediainformation=Media Information
 movieinformation.trailer=Trailer
-
-
-
-
-#BUNDLE.getString("")); //$NON-NLS-1$
-
-#  /** The Constant BUNDLE. */
-#  private static final ResourceBundle BUNDLE           = ResourceBundle.getBundle("messages", new UTF8Control()); //$NON-NLS-1$
-
