--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -2,27 +2,109 @@
 Button.ok=Ok
 Button.cancel=Abbrechen
 Button.add=Hinzufügen
+Button.addfile=Detai hinzufügen
 Button.remove=Entfernen
 Button.continue=Weitermachen
 Button.abort=Abbrechen
+Button.abortqueue=Warteschlange abbrechen
+Button.close=Schließen
+Button.search=Suchen
 
 # vertical tabs
-movies=Filme
-moviesets=Film Sets
-settings=Einstellungen
+tmm.movies=Filme
+tmm.moviesets=Film Sets
+tmm.settings=Einstellungen
 
 # menu actions
-exit.runningtasks=Bist Du sicher, dass Du tinyMediaManager schließen möchtest?\nEinige Aufgaben laufen noch im Hintergrund...
-exit.confirmation=Wirklich beenden?
-clearCache=Cache löschen
-clearDatabase=Datenbank neu aufbauen
-clearDatabase.info=Datenbank initialisiert. Bitte tinyMediaManager neu starten.
-clearDatabase.error=Ein Fehler ist beim initialisieren aufgetreten. Bitte die Datei 'tmm.odb' selbst löschen.
-debug=Debug
-about=Über
-donate=Spenden
-exit=Beenden
+tmm.exit=Beenden
+tmm.exit.runningtasks=Bist Du sicher, dass Du tinyMediaManager schließen möchtest?\nEinige Aufgaben laufen noch im Hintergrund...
+tmm.exit.confirmation=Wirklich beenden?
+tmm.clearcache=Cache löschen
+tmm.cleardatabase=Datenbank neu aufbauen
+tmm.cleardatabase.info=Datenbank initialisiert. Bitte tinyMediaManager neu starten.
+tmm.cleardatabase.error=Ein Fehler ist beim initialisieren aufgetreten. Bitte die Datei 'tmm.odb' selbst löschen.
+tmm.debug=Debug
+tmm.about=Über
+tmm.donate=Spenden
+tmm.searchfield=Suchen...
+
 status.activethreads=laufende Aufgaben
+
+# menu & popup on rightclick
+onlyoneoperation=Nur eine Funktion zur gleichen Zeit darf ausgeführt werden
+movie.update.datasource=Filmverzeichnis neu einlesen
+movie.scrape.selected=Suchen & Scrapen aller ausgewählten Filme
+movie.scrape.selected.desc=Suchen & Scrapen aller ausgewählten Filme
+movie.scrape.selected.force=Automatisch Suchen & Scrapen aller ausgewählten Filme - nimm besten Treffer
+movie.scrape.selected.force.desc=Automatisch Suchen & Scrapen aller ausgewählten Filme - nimm besten Treffer
+movie.scrape.unscraped=Alle ungescrapten Filme suchen & scrapen - nimm besten Treffer
+movie.scrape.unscraped.desc=Alle ungescrapten Filme suchen & scrapen - nimm besten Treffer
+movie.scrape.metadata=Metadaten von ausgewählten Filmen scrapen
+movie.scrape.metadata.desc=Metadaten von ausgewählten Filmen scrapen
+movie.remove=Ausgewählte Filme entfernen
+movie.rename=Ausgewählte Filme umbenennen
+movie.updatemediainfo=Medianinformationen aus ausgewählten Filmen neu einlesen
+movie.bulkedit=Mehrfach bearbeiten
+movie.bulkedit.desc=Ändere Genres, Markierungen, Film Sets und gesehen/ungesehen für alle selektierten Filme
+
+movie.export=Exportiere Filmliste(n) von selektierten Filmen
+movie.export.detail=Vorlage beinhaltet Film Detailseiten
+movie.export.setdestination=Verzeichnis auswählen
+movie.export.selectdirectory=Wähle Verzeichnis für den Export
+
+movie.edit=Film bearbeiten
+movie.edit.discard=Änderungen verwerfen
+
+movie.inmovieset=Film in Filmset
+movie.notinmovieset=Film in keinem Filmset
+movie.change=Film wechseln
+
+cast.actor.add=neuen Schauspieler hinzufügen
+cast.actor.remove=Schauspieler entfernen
+cast.actor.unknown=unbekannter Schauspieler
+cast.role.unknown=unbekannte Rolle
+
+scraper=Scraper
+scraper.metadata.select=Wähle die zu importierenden Metadaten
+scraper.metadata.defaults=Standardmäßig immer folgende Metadaten scrapen
+scraper.start=Starte Scrapen
+scraper.metadata=Metadaten Scraper
+scraper.artwork=Artwork Scraper
+scraper.trailer=Film Trailer Scraper
+
+image.choose=Wähle ein Bild
+image.choose.file=Wähle eine Datei
+image.choose.fanart=Wähle Fanart
+image.choose.poster=Wähle Poster
+image.extrathumbs.markall=Wähle alle Extrathumbs
+image.extrathumbs.unmarkall=Entferne die Auswahl der Extrathumbs
+image.extrafanart.markall=Wähle alle Extratfanarts
+image.extrafanart.unmarkall=Entferne die Auswahl der Extratfanarts
+image.nonefound=kein Bild gefunden
+image.noneselected=kein Bild selektiert!
+image.seteselected=Setze selektiertes Bild
+image.download.noid=Keine ID (imdbId oder tmdbId) zum Suchen verfügbar
+image.download.progress=lade Bilder herunter
+image.poster.size=Poster Größe
+image.poster.naming=Poster Namenskonvention
+image.fanart.size=Fanart Größe
+image.fanart.naming=Fanart Namenskonvention
+
+genre.add=Genre hinzufügen
+genre.remove=Genre entfernen
+
+trailer.add=Film Trailer hinzufügen
+trailer.remove=ausgewählten Film Trailer entfernen
+
+tag.add=Markierung hinzufügen
+tag.remove=ausgewählte Markierung entfernen
+
+queue.abort.desc=Abort editing all selected movies
+
+sort.ascending=aufsteigend
+sort.descending=absteigend
+
+tmdb.wrongformat=TMDB Id hat falsches Format:
 
 BugReport=Fehler melden
 BugReport.name=Name (optional)
@@ -42,9 +124,6 @@ Feedback.message.empty=Feedback ist leer
 Feedback.send.error=Fehler beim Senden vom Feedback
 Feedback.send.ok=Feedback gesendet - Danke!
 
-Searchfield=Suchen...
-no.image.found=kein Bild gefunden
-
 # settings menu (linebreaks with html)
 Settings.movies=Filme
 Settings.scraper=<html>Filme -<br>Scraper</html>
@@ -63,10 +142,6 @@ Settings.clearCache=Cache beim Beenden löschen
 Settings.poster=Poster und Fanart
 Settings.source=Datenherkunft
 Settings.fanarttv.alert=Achtung: Fanart.tv unterstützt keine Film Poster!
-Settings.postersize=Poster Größe
-Settings.fanartsize=Fanart Größe
-Settings.posternaming=Poster Name
-Settings.fanartnaming=Fanart name
 Settings.moviefilename=<Film Dateiname>
 Settings.tbn.deprecation=.tbn is ein altes Format und wird nicht mehr unterstützt.
 Settings.naming.info=Info: Jede Datei mit .JPG kann möglicherweise ein .PNG herunterladen. Es hängt von der Bild Quelle ab.
@@ -83,13 +158,10 @@ Settings.movieset.buttonselect=Verzeichnis auswählen
 Settings.movieset.folderchooser=Wähle das Movieset Artwork Verzeichnis
 
 # scraper settings
-Settings.metadata=Metadata scraper
 Settings.getfromTMDB=Plot/Title/Tagline von der TMDB übernehmen?
 Settings.preferredLanguage=bevorzugte Sprache
 Settings.certificationCountry=lokalisierte Altersbeschränkung
-Settings.defaults=Standardmäßig folgende Metadaten aktualisieren
 Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Auswahl)
-Settings.trailer=Film-Trailer scrapen
 
 # movie settings
 Settings.datasource=Film Verzeichnis
@@ -109,15 +181,69 @@ Settings.renamer.info=Verfügbare Werte\r\n$T = Titel\r\n$O = Original Titel\r\n
 Settings.renamer.example=Wähle eine Datei und/oder Verzeichnis Schema\nBeispiel:\nFilmverzeichnis = C:\\Filme\nVerzeichnis $1\\$T [$Y]\nDateiname = $T\n\nErgebnis:\nVerzeichnis = C:\\Filme\\A\\Aladdin [1992]\nDateiname = Aladdin.avi\n\n\n\nUm Ordner/Dateien nicht umzubenennen, Feld einfach leer lassen.
 
 # metatags
-metatag.title=Titel
-metatag.otitle=Original Titel
-metatag.tagline=kurze Inhaltsangabe
-metatag.plot=Inhaltsangabe
-metatag.rating=Bewertung
-metatag.runtime=Laufzeit
-metatag.year=Jahr
-metatag.certification=Altersbeschränkung
-metatag.cast=Besetzung
-metatag.genre=Genre
 metatag.artwork=Artwork
+metatag.audiochannels=AKanäle
+metatag.audiocodec=ACodec
+metatag.cast=Besetzung
+metatag.certification=Altersbeschränkung
+metatag.dateadded=hinzugefügt am
+metatag.filename=Dateiname
+metatag.files=Dateien
+metatag.genre=Genre
+metatag.images=Bilder
+metatag.imdb=IMDB Id
+metatag.minutes=min
+metatag.movieset=Filmset
+metatag.name=Name
+metatag.nfo=NFO
+metatag.notwatched=nicht gesehen
+metatag.originaltitle=Original Titel
+metatag.path=Pfad
+metatag.plot=Inhaltsangabe
+metatag.production=Produktion
+metatag.quality=Qualität
+metatag.rating=Bewertung
+metatag.resolution=Auflösung
+metatag.role=Rolle
+metatag.runtime=Laufzeit
+metatag.size=Größe
+metatag.sorttitle=Sortierungstitel
+metatag.source=Herkunft
+metatag.spokenlanguages=Sprache(n)
+metatag.tagline=kurze Inhaltsangabe
+metatag.tags=Markierungen
+metatag.title=Titel
+metatag.tmdb=TMDB Id
 metatag.trailer=Film Trailer
+metatag.url=Url
+metatag.videobitrate=VBitrate
+metatag.videocodec=VCodec
+metatag.watched=bereits angesehen
+metatag.year=Jahr
+
+moviechooser.nothingfound=nichts gefunden
+moviechooser.search=Film suchen
+moviechooser.scrape=Scrape folgende Filme
+moviechooser.scrapeing=Scrapen:
+moviechooser.searchingfor=Suchen nach: 
+moviechooser.searchresult=Suchergebnis 
+
+movieextendedsearch.options=Erweiterte Filter und Sortierungsmöglichkeiten
+movieextendedsearch.filterby=filtern nach
+movieextendedsearch.duplicates=doppelte anzeigen
+movieextendedsearch.watched=bereits gesehen
+movieextendedsearch.genre=Genre
+movieextendedsearch.cast=Besetzung
+movieextendedsearch.tag=Markierung
+movieextendedsearch.movieset=Filme in Filmsets
+movieextendedsearch.sortby=sortiert nach
+
+movieinformation.details=Detail
+movieinformation.details2=Detail 2
+movieinformation.overview=Übersicht
+movieinformation.director=Regie
+movieinformation.writer=Drehbuch
+movieinformation.cast=Besetzung
+movieinformation.actors=Schauspieler
+movieinformation.mediainformation=Medien Informationen
+movieinformation.trailer=Film Trailer
