started with tv show UI (incomplete!)

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -13,6 +13,7 @@ Button.search=Search
 # vertical tabs
 tmm.movies=Movies
 tmm.moviesets=Movie sets
+tmm.tvshows=TV shows
 tmm.settings=Settings
 
 # menu actions
@@ -128,6 +129,7 @@ Feedback.send.ok=Feedback sent
 Settings.movies=Movies
 Settings.scraper=<html>Movies -<br>Scraper</html>
 Settings.images=<html>Movies -<br>Images</html>
+Settings.tvshow=Tv Shows
 Settings.general=General
 
 # general settings
@@ -164,8 +166,8 @@ Settings.certificationCountry=Certification country
 Settings.default.autoscrape=automatically scrape images (without selection)
 
 # movie settings
-Settings.datasource=Data Sources
-Settings.datasource.folderchooser=add datasource
+Settings.datasource=Datasources
+Settings.datasource.folderchooser=Add datasource
 Settings.datasource.remove=Remove datasource
 Settings.datasource.remove.info=If you remove %s from your data sources, all movies inside this path will also be removed. Continue?
 Settings.nfoFormat=NFO format
@@ -179,6 +181,11 @@ Settings.renamer.folder=Folder name
 Settings.renamer.file=File name
 Settings.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$Y = Year\r\n$I = IMDB number\r\n$E = Sort title\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
 Settings.renamer.example=Choose a folder and file renaming pattern.\nExample:\nDatasource = /media/movies\nFolder name = $1/$T [$Y]\nFile name = $T\n\nResult:\nFolder name = /media/movies/A/Aladdin [1992]/\nFile name = Aladdin.avi\n\n\n\nIf fields are empty, the renaming will be skipped!
+
+# tv show settings
+Settings.tvshowdatasource=TV show datasources
+Settings.tvshowdatasource.folderchooser=add TV show datasource
+Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will also be removed. Continue?
 
 # metatags
 metatag.artwork=Artwork
