I18N: movie sets localizable

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -9,11 +9,15 @@ Button.abort=Abort
 Button.abortqueue=Abort queue
 Button.close=Close
 Button.search=Search
+Button.save=Save
 
-# vertical tabs
+# vertical tabs (singular / plural)
 tmm.movies=Movies
+tmm.movie=Movie
 tmm.moviesets=Movie sets
+tmm.movieset=Movie set
 tmm.tvshows=TV shows
+tmm.tvshow=TV show
 tmm.settings=Settings
 
 # menu actions
@@ -59,6 +63,22 @@ movie.edit.discard=Discard changes
 movie.inmovieset=Movies in a movieset
 movie.notinmovieset=Movies not in a movieset
 movie.change=Change movie
+
+movieset.add.desc=Add a movie set
+movieset.remove.desc=Remove selected movie set
+movieset.title=Movieset title:
+movieset.search=Search TMDB for movieset metadata
+movieset.tmdb.find=Find TmdbId
+movieset.tmdb.desc=Find TmdbId for this movie
+movieset.tmdb.error=Sorry, no TmdbId could be found. Try to search for the movieset
+movieset.edit=Edit movieset
+movieset.parts=Movieset parts
+movieset.movie.assign=Assign movies to this movieset
+movieset.movie.matched=matched movie
+movieset.movie.remove=Remove marked movie from movieset
+movieset.movie.moveup=Move marked movie up
+movieset.movie.movedown=Move marked movie down
+movieset.save.desc=Save movie set metadata
 
 cast.actor.add=Add a new Actor
 cast.actor.remove=Remove Actor
@@ -254,3 +274,5 @@ movieinformation.cast=Cast
 movieinformation.actors=Actors
 movieinformation.mediainformation=Media Information
 movieinformation.trailer=Trailer
+
+BUNDLE.getString("")); //$NON-NLS-1$
