added queuesize to info popup

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -34,6 +34,7 @@ tmm.donate=Donate
 tmm.searchfield=Search...
 
 status.activethreads=active threads
+status.queuesize=Queue:
 
 # menu & popup on rightclick
 onlyoneoperation=Only one operation at one time is allowed
