added tv show editor added tv show image chooser refactored internal storing of IDs (movies, tv shows) changed some dialogs to be able to load them in windowbuilder pro (after i18n broke windowbuilder pro)

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -98,6 +98,7 @@ image.choose=Choose an image
 image.choose.file=Choose file
 image.choose.fanart=Choose fanart
 image.choose.poster=Choose poster
+image.choose.banner=Choose banner
 image.extrathumbs.markall=Mark all extrathumbs
 image.extrathumbs.unmarkall=Unmark all extrathumbs
 image.extrafanart.markall=Mark all extrafanart
@@ -208,6 +209,9 @@ Settings.tvshowdatasource=TV show datasources
 Settings.tvshowdatasource.folderchooser=add TV show datasource
 Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will also be removed. Continue?
 
+# tv shows
+tvshow.edit=Edit TV show
+
 # metatags
 metatag.artwork=Artwork
 metatag.audiochannels=AChannels
@@ -242,6 +246,7 @@ metatag.tagline=Tagline
 metatag.tags=Tags
 metatag.title=Title
 metatag.tmdb=TMDB Id
+metatag.tvdb=TheTvDB Id
 metatag.trailer=Trailer
 metatag.url=Url
 metatag.videobitrate=VBitrate
