added subtitle column

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -242,6 +242,7 @@ metatag.size=Size
 metatag.sorttitle=Sorttitle
 metatag.source=Source
 metatag.spokenlanguages=Spoken languages
+metatag.subtitles=Subtitles
 metatag.tagline=Tagline
 metatag.tags=Tags
 metatag.title=Title
