Changed some settings (mostly TV show settings)

--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -126,8 +126,8 @@ Feedback.send.ok=Feedback gesendet - Danke!
 
 # settings menu (linebreaks with html)
 Settings.movies=Filme
-Settings.scraper=<html>Filme -<br>Scraper</html>
-Settings.images=<html>Filme -<br>Bilder</html>
+Settings.scraper=<html><center>Filme -<br>Scraper</center></html>
+Settings.images=<html><center>Filme -<br>Bilder</center></html>
 Settings.general=Allgemein
 
 # general settings
