--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -150,9 +150,10 @@ Feedback.send.ok=Feedback sent
 
 # settings menu (linebreaks with html)
 Settings.movies=Movies
-Settings.scraper=<html>Movies -<br>Scraper</html>
-Settings.images=<html>Movies -<br>Images</html>
+Settings.scraper=<html><center>Movies -<br>Scraper</center></html>
+Settings.images=<html><center>Movies -<br>Images</center></html>
 Settings.tvshow=Tv Shows
+Settings.tvshowscraper=<html><center>Tv Shows -<br>Scraper</center></html>
 Settings.general=General
 
 # general settings
